src/openim_sdk_ffi.h

extern void SetOneConversationBurnDuration(char* operationID, char* conversationID, int32_t burnDuration);
extern void SetOneConversationRecvMessageOpt(char* operationID, char* conversationID, int opt);
extern void SetConversationRecvMessageOpt(char* operationID, char* conversationIDList, int opt);
extern void SetGlobalRecvMessageOpt(char* operationID, int opt);
extern void HideConversation(char* operationID, char* conversationID);
extern void GetConversationRecvMessageOpt(char* operationID, char* conversationIDList);
extern void DeleteConversation(char* operationID, char* conversationID);
extern void DeleteAllConversationFromLocal(char* operationID);
extern void SetConversationDraft(char* operationID, char* conversationID, char* draftText);
extern void ResetConversationGroupAtType(char* operationID, char* conversationID);
extern void PinConversation(char* operationID, char* conversationID, _Bool isPinned);
extern void GetTotalUnreadMsgCount(char* operationID);
extern char* CreateAdvancedTextMessage(char* operationID, char* text, char* messageEntityList);
extern char* CreateTextMessage(char* operationID, char* text);
extern char* CreateTextAtMessage(char* operationID, char* text, char* atUserList, char* atUsersInfo, char* message);
extern char* CreateLocationMessage(char* operationID, char* description, double longitude, double latitude);
extern char* CreateCustomMessage(char* operationID, char* data, char* extension, char* description);
extern char* CreateQuoteMessage(char* operationID, char* text, char* message);
extern char* CreateAdvancedQuoteMessage(char* operationID, char* text, char* message, char* messageEntityList);