lib/openim_sdk_ffi_bindings_generated.dart


  late final _SetOneConversationBurnDurationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('SetOneConversationBurnDuration');
  late final _SetOneConversationBurnDuration =
      _SetOneConversationBurnDurationPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void SetOneConversationRecvMessageOpt(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    int opt,
  ) {
    return _SetOneConversationRecvMessageOpt(
      operationID,
      conversationID,
      opt,
    );
  }

  late final _SetOneConversationRecvMessageOptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('SetOneConversationRecvMessageOpt');
  late final _SetOneConversationRecvMessageOpt =
      _SetOneConversationRecvMessageOptPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void SetConversationRecvMessageOpt(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationIDList,
    int opt,
  ) {
    return _SetConversationRecvMessageOpt(
      operationID,
      conversationIDList,
      opt,
    );
  }

  late final _SetConversationRecvMessageOptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('SetConversationRecvMessageOpt');
  late final _SetConversationRecvMessageOpt =
      _SetConversationRecvMessageOptPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void SetGlobalRecvMessageOpt(
    ffi.Pointer<ffi.Char> operationID,
    int opt,
  ) {
    return _SetGlobalRecvMessageOpt(
      operationID,
      opt,
    );
  }

  late final _SetGlobalRecvMessageOptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Int)>>('SetGlobalRecvMessageOpt');
  late final _SetGlobalRecvMessageOpt = _SetGlobalRecvMessageOptPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, int)>();

  void HideConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _HideConversation(
      operationID,
      conversationID,
    );
  }

  late final _HideConversationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('HideConversation');
  late final _HideConversation = _HideConversationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetConversationRecvMessageOpt(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationIDList,
  ) {
    return _GetConversationRecvMessageOpt(
      operationID,
      conversationIDList,
    );
  }

  late final _GetConversationRecvMessageOptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetConversationRecvMessageOpt');
  late final _GetConversationRecvMessageOpt =
      _GetConversationRecvMessageOptPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DeleteConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _DeleteConversation(
      operationID,
      conversationID,
    );
  }

  late final _DeleteConversationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('DeleteConversation');
  late final _DeleteConversation = _DeleteConversationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DeleteAllConversationFromLocal(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _DeleteAllConversationFromLocal(
      operationID,
    );
  }

  late final _DeleteAllConversationFromLocalPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'DeleteAllConversationFromLocal');
  late final _DeleteAllConversationFromLocal =
      _DeleteAllConversationFromLocalPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>)>();

  void SetConversationDraft(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> draftText,
  ) {
    return _SetConversationDraft(
      operationID,
      conversationID,
      draftText,
    );
  }

  late final _SetConversationDraftPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetConversationDraft');
  late final _SetConversationDraft = _SetConversationDraftPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void ResetConversationGroupAtType(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _ResetConversationGroupAtType(
      operationID,
      conversationID,
    );
  }

  late final _ResetConversationGroupAtTypePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('ResetConversationGroupAtType');
  late final _ResetConversationGroupAtType =
      _ResetConversationGroupAtTypePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void PinConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    bool isPinned,
  ) {
    return _PinConversation(
      operationID,
      conversationID,
      isPinned,
    );
  }

  late final _PinConversationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('PinConversation');
  late final _PinConversation = _PinConversationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)>();

  void GetTotalUnreadMsgCount(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetTotalUnreadMsgCount(
      operationID,
    );
  }

  late final _GetTotalUnreadMsgCountPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetTotalUnreadMsgCount');
  late final _GetTotalUnreadMsgCount = _GetTotalUnreadMsgCountPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateAdvancedTextMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> messageEntityList,
  ) {
    return _CreateAdvancedTextMessage(
      operationID,
      text,
      messageEntityList,
    );
  }

  late final _CreateAdvancedTextMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateAdvancedTextMessage');
  late final _CreateAdvancedTextMessage =
      _CreateAdvancedTextMessagePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateTextMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
  ) {
    return _CreateTextMessage(
      operationID,
      text,
    );
  }

  late final _CreateTextMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateTextMessage');
  late final _CreateTextMessage = _CreateTextMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateTextAtMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> atUserList,
    ffi.Pointer<ffi.Char> atUsersInfo,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _CreateTextAtMessage(
      operationID,
      text,
      atUserList,
      atUsersInfo,
      message,
    );
  }

  late final _CreateTextAtMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateTextAtMessage');
  late final _CreateTextAtMessage = _CreateTextAtMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateLocationMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> description,
    double longitude,
    double latitude,
  ) {
    return _CreateLocationMessage(
      operationID,
      description,
      longitude,
      latitude,
    );
  }

  late final _CreateLocationMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Double,
              ffi.Double)>>('CreateLocationMessage');
  late final _CreateLocationMessage = _CreateLocationMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, double, double)>();

  ffi.Pointer<ffi.Char> CreateCustomMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> data,
    ffi.Pointer<ffi.Char> extension1,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _CreateCustomMessage(
      operationID,
      data,
      extension1,
      description,
    );
  }

  late final _CreateCustomMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateCustomMessage');
  late final _CreateCustomMessage = _CreateCustomMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateQuoteMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _CreateQuoteMessage(
      operationID,
      text,
      message,
    );
  }

  late final _CreateQuoteMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateQuoteMessage');
  late final _CreateQuoteMessage = _CreateQuoteMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateAdvancedQuoteMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> messageEntityList,
  ) {
    return _CreateAdvancedQuoteMessage(
      operationID,
      text,
      message,
      messageEntityList,
    );
  }
